--- a/login.html
+++ b/login.html
@@ -1,51 +1,58 @@
 <!doctype html>
 <html lang="en" data-bs-theme="auto">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>OTP INDIA · LogIn</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="style.css" rel="stylesheet"> <!-- External CSS -->
-    <link rel="shortcut icon" href="img/otp_logo_high_res.png" type="image/x-icon">
-  </head>
-  <body class="text-center">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>OTP INDIA · LogIn</title>
 
-    <main class="form-login w-100 m-auto">
-      <form>
-        <div class="mb-4">
-          <img src="img/otp_logo_high_res.png" alt="OTP Logo" width="80" height="70">
-        </div>        
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet"> <!-- External CSS -->
+  <link rel="shortcut icon" href="img/otp_logo_high_res.png" type="image/x-icon">
+</head>
 
-        <h5 class="h5 mb-3 fw-bold">OTP INDIA</h5>
+<body class="text-center">
 
-        <div class="form-floating">
-          <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-          <label for="floatingInput">Email address</label>
+  <main class="form-login w-100 m-auto">
+    <form action="dashboard.html" method="POST">
+      <div class="mb-4">
+        <img src="img/otp_logo_high_res.png" alt="OTP Logo" width="80" height="70">
+      </div>
+
+      <h5 class="h5 mb-3 fw-bold">OTP INDIA</h5>
+
+      <div class="form-floating mb-2">
+        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" required>
+        <label for="floatingInput">Email address</label>
+      </div>
+
+      <div class="form-floating mb-3">
+        <input type="password" class="form-control" id="floatingPassword" placeholder="Password" required>
+        <label for="floatingPassword">Password</label>
+      </div>
+
+      <div class="d-flex justify-content-between align-items-center mb-3">
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" value="t&c" id="termsCheck" checked required>
+          <label class="form-check-label" for="termsCheck">
+            <a href="terms.html" target="_blank">T&C apply</a>
+          </label>
         </div>
-        <div class="form-floating">
-          <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-          <label for="floatingPassword">Password</label>
+        <div>
+          <a href="forgotpassword.html" class="text-decoration-none text-primary">Forgot Password?</a>
         </div>
+      </div>
 
-        <div class="d-flex justify-content-between align-items-center mb-3">
-          <div class="form-check">
-            <input class="form-check-input" type="checkbox" value="t&c" id="termsCheck" checked>
-            <label class="form-check-label" for="termsCheck">
-              <a href="terms.html" target="_blank">T&C apply</a>
-            </label>
-          </div>
-          <div>
-            <a href="forgot-password.html" class="text-decoration-none text-primary">Forgot Password?</a>
-          </div>
-        </div>
-        <p class="mt-3 mb-3 text-muted" style="font-size: 0.875rem;">Don't have an account? No worry <a href="Register.html">Register Here.</a></p>
+      <p class="mt-3 mb-2 text-muted" style="font-size: 0.875rem;">
+        Don't have an account? No worry <a href="Register.html">Register Here.</a>
+      </p>
 
-        
-        <button class="w-100 btn btn-lg btn-info" type="submit">Login</button>
-        <p class="mt-3 mb-3 text-muted">&copy; 2025 OTP INDIA</p>
-      </form>
-    </main>
+      <button class="w-100 btn btn-lg btn-info" type="submit">Login</button>
+    </form>
 
-  </body>
+    <p class="mt-3 mb-3 text-muted">&copy; 2025 OTP INDIA</p>
+  </main>
+
+</body>
+
 </html>
