authentication all done

--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -13,12 +13,14 @@
   <body class="text-center">
 
     <main class="form-login w-100 m-auto">
+        <h6 class="h6 mb-3 fw-bold" style="font-size: 0.89rem;">Countless Possibilities, Powered by Purpose</h6>
+
       <form action="login.html" method="POST">
-        <div class="mb-4">
+        <div class="mb-2">
           <img src="img/otp_logo_high_res.png" alt="OTP Logo" width="80" height="70">
         </div>        
 
-        <h5 class="h5 mb-3 fw-bold">OTP INDIA</h5>
+        <h6 class="h6 mb-3 fw-bold">INDIA</h6>
 
         <div class="form-floating mb-2">
           <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" required>
